2007-01-25
    * Fix the stat function (on Windows) to use GetFileAttributesEx insead of FindFirstFile

Version 1.01
2007-01-17 Shachar Shemesh
    * Implement the autofd::stat function properly (win32)
    * Fix the implementation of autofd::fstat (win32) to report the file type
    * Make sure that all *stat functions go through the wrappers

Version 1.00
2007-01-12 Shachar Shemesh
    * Modify the "off_t" type on Windows to 64 bit to allow files greater than 4GB

Version 0.19
2006-11-21 Shachar Shemesh
	* Implement proper write buffering while encrypting.
	* Implement buffering (read and write) while decrypting.

2006-11-20 Shachar Shemesh
	* Implement proper read buffering while encrypting. X2 speed up on
	  linux and on Windows.

Version 0.18
2006-11-15 Shachar Shemesh
	* Fix bug 1476034 - Make sure that -c works with file lists.
	* Fix bug 1476040 - Uninitialized nesting level caused crashes.

2006-11-14 Shachar Shemesh
	* Remove ODS calls from Windows code - 10 times speedup

2006-02-23 Shachar Shemesh
	* Fixed incorrect permissions when creating the plain text "filemap"
	  file.

2006-02-09 Shachar Shemesh
	* Added a required DEFINE to make sure STLPort compiles on newer Platform
	  SDKs than what comes builtin with Visual Studio 6.

Version 0.17
2006-02-09 Shachar Shemesh
	* Add compilation instructions for Windows
	* Unhandled file types are now skipped with a message, rather than
	  abort the whole process. (Fix bug #1426850)

2006-01-28 Shachar Shemesh
	* Add a tutorial section to the man page.

2006-01-27 Shachar Shemesh
	* Fix a bug with using --filelist and --trim=0 and having an absolute
	  path in the file list

Version 0.16
2005-11-04 Shachar Shemesh
	* Implement filename encryption.
	* --meta-encrypt is now called "--name-encrypt"
	* Added "--ne-nesting" to allow smaller loads of files on each directory.

2005-07-29 Shachar Shemesh
	* Use argtable to print the argument list
	* Add the "--meta-encrypt" option

Version 0.15